# airflow-provider-great-expectations

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE.md  README.md  latest  mkdocs.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py  test-requirements.txt  versions.json
.github/scripts/: verify_tag_and_version.py
.github/workflows/: ci.yaml  codeql.yml  integration-test.yml  lint.yml  unit-test.yml
1.0.0a2/: 404.html  index.html  sitemap.xml
1.0.0a2/contributing/code-of-conduct/: index.html
1.0.0a2/contributing/contributing-guide/: index.html
1.0.0a2/contributing/contributor-roles/: index.html
1.0.0a2/contributing/contributors/: index.html
1.0.0a2/examples/: index.html
1.0.0a2/getting-started/: index.html
1.0.0a2/migration-guide/: index.html
1.0.0a2/search/: search_index.json
1.0.0a3/: 404.html  index.html  sitemap.xml
1.0.0a3/contributing/code-of-conduct/: index.html
1.0.0a3/contributing/contributing-guide/: index.html
1.0.0a3/contributing/contributor-roles/: index.html
1.0.0a3/contributing/contributors/: index.html
1.0.0a3/examples/: index.html
1.0.0a3/getting-started/: index.html
1.0.0a3/migration-guide/: index.html
1.0.0a4/: 404.html  index.html  sitemap.xml
1.0.0a4/contributing/code-of-conduct/: index.html
1.0.0a4/contributing/contributing-guide/: index.html
1.0.0a4/contributing/contributor-roles/: index.html
1.0.0a4/contributing/contributors/: index.html
1.0.0a4/examples/: index.html
1.0.0a4/getting-started/: index.html
1.0.0a4/migration-guide/: index.html
1.0.0a5/: 404.html  index.html  sitemap.xml
1.0.0a5/contributing/code-of-conduct/: index.html
1.0.0a5/contributing/contributing-guide/: index.html
1.0.0a5/contributing/contributor-roles/: index.html
1.0.0a5/contributing/contributors/: index.html
1.0.0a5/examples/: index.html
1.0.0a5/getting-started/: index.html
1.0.0a5/migration-guide/: index.html
dev/: 404.html  index.html  sitemap.xml
dev/contributing/code-of-conduct/: index.html
dev/contributing/contributing-guide/: index.html
dev/contributing/contributor-roles/: index.html
dev/contributing/contributors/: index.html
dev/examples/: index.html
dev/getting-started/: index.html
dev/migration-guide/: index.html
dev/search/: search_index.json
docker/spark/: docker-compose.yml
docs/: examples.md  getting-started.md  index.md  migration-guide.md
docs/contributing/: code-of-conduct.md  contributing-guide.md  contributor-roles.md  contributors.md
examples/: example_great_expectations_dag.py
examples/great_expectations/checkpoints/: taxi.fail.chk.yml
great_expectations_airflow/operators/: great_expectations.py
great_expectations_provider/: __init__.py  get_provider_info.py
great_expectations_provider/common/: constants.py  errors.py  external_connections.py  gx_context_actions.py
great_expectations_provider/example_dags/: bigquery_example.py  example_dag_with_batch_parameters.py  example_great_expectations_dag.py
great_expectations_provider/example_dags/great_expectations/expectations/taxi/: demo.json
great_expectations_provider/examples/: example_great_expectations_dag.py
great_expectations_provider/examples/great_expectations/checkpoints/: taxi.fail.chk.yml  taxi.pass.chk.yml
great_expectations_provider/exceptions/: exceptions.py
great_expectations_provider/hooks/: external_connections.py  gx_cloud.py
great_expectations_provider/operators/: botocontext.py  constants.py  context.py  great_expectations.py  great_expectations_bigquery.py  validate_batch.py  validate_checkpoint.py  validate_dataframe.py
include/: edit_plugin_expectation_suite.ipynb
include/data/: yellow_tripdata_sample_2019-01.csv
include/great_expectations/: great_expectations.yml
include/great_expectations/checkpoints/: plugin_expectation_checkpoint.yml  taxi.fail.chk.yml  taxi.pass.chk.yml
include/great_expectations/checkpoints/plugin_expectation_checkpoint/: chk.yml
include/great_expectations/checkpoints/simple/: chk.yml
include/great_expectations/checkpoints/taxi/fail/: chk.yml
include/great_expectations/checkpoints/taxi/pass/: chk.yml
include/great_expectations/expectations/: .ge_store_backend_id  plugin_expectation_suite.json
include/great_expectations/expectations/taxi/: demo.json  demo_fail.json
include/great_expectations/object_configs/: example_checkpoint_config.py  example_data_context_config.py  example_runtime_batch_request_for_plugin_expectation.py
include/great_expectations/plugins/expectations/: expect_column_values_to_be_alphabetical.py
include/gx/: great_expectations.yml
plugins/: great_expectations_data_docs_link.py
scripts/: docs_deploy.py
test/operators/: test_operators.py
tests/integration/: conftest.py  test_example_dag.py  test_validate_batch_operator.py  test_validate_checkpoint.py  test_validate_checkpoint_operator.py  test_validate_dataframe_operator.py
tests/operators/: test_great_expectations.py  test_operators.py  test_validate_batch_operator.py  test_validate_checkpoint_operator.py  test_validate_dataframe_operator.py
tests/test_operators/: test_validate_batch_operator.py  test_validate_checkpoint_operator.py  test_validate_dataframe_operator.py
tests/unit/: conftest.py  test_common.py  test_errors.py  test_external_connections.py  test_validate_batch_operator.py  test_validate_checkpoint_operator.py  test_validate_dataframe_operator.py
