[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 110
target-version = ['py39']

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--tb=short --cov-report=xml"
testpaths = [
    "tests",
]

[tool.isort]
profile = "black"
multi_line_output = 3
