[metadata]
name = airflow-provider-great-expectations
version = attr: great_expectations_provider.__version__
[options]
python_requires = >=3.9
packages = find_namespace:
include_package_data = true
install_requires =
    apache-airflow>=2.1
    great-expectations[snowflake,postgresql,mssql,bigquery,athena,spark,gcp,azure,s3]>=1.3.1
    setuptools>=41.0.0

[options.extras_require]
athena =
    great-expectations[athena]>=1.3.1
azure =
    great-expectations[azure]>=1.3.1
bigquery =
    great-expectations[bigquery]>=1.3.1
lint =
    mypy==1.14.1
    ruff==0.8.3
gcp =
    great-expectations[gcp]>=1.3.1
mssql =
    great-expectations[mssql]>=1.3.1
postgresql =
    great-expectations[postgresql]>=1.3.1
s3 =
    great-expectations[s3]>=1.3.1
snowflake =
    great-expectations[snowflake]>=1.3.1
spark =
    great-expectations[spark, spark-connect]>=1.3.1
    pyarrow>=4.0.0
tests =
    pytest==8.3.4
    pytest-mock==3.14.0

[options.entry_points]
apache_airflow_provider=
  provider_info=great_expectations_provider.__init__:get_provider_info

