[metadata]
name = airflow-provider-great-expectations
version = attr: great_expectations_provider.common.constants
url = https://github.com/astronomer/airflow-provider-great-expectations
author = Great Expectations & Astronomer
author_email = humans@astronomer.io
description = An Apache Airflow provider for Great Expectations
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache License 2.0
license_files = LICENSE.txt
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Framework :: Apache Airflow
    Framework :: Apache Airflow :: Provider
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
project_urls =
    Source Code=https://github.com/astronomer/airflow-provider-great-expectations
    Changelog=https://github.com/astronomer/airflow-provider-great-expectations/blob/main/CHANGELOG.md

[options]
python_requires = >=3.9, <=3.12
packages = find_namespace:
include_package_data = true
install_requires =
    great-expectations>=1.3.5
    apache-airflow>=2.1
    setuptools>=41.0.0

[options.extras_require]
athena =
    great-expectations[athena]>=1.3.5
azure =
    great-expectations[azure]>=1.3.5
bigquery =
    great-expectations[bigquery]>=1.3.5
lint =
    mypy==1.14.1
    ruff==0.8.3
    pytest==8.3.4
    pytest-mock==3.14.0
    great-expectations[spark, spark-connect]>=1.3.5
gcp =
    great-expectations[gcp]>=1.3.5
mssql =
    great-expectations[mssql]>=1.3.5
postgresql =
    great-expectations[postgresql]>=1.3.5
s3 =
    great-expectations[s3]>=1.3.5
snowflake =
    great-expectations[snowflake]>=1.3.5
spark =
    great-expectations[spark, spark-connect]>=1.3.5
    pyarrow>=4.0.0
tests =
    pytest==8.3.4
    pytest-mock==3.14.0

[options.entry_points]
apache_airflow_provider=
  provider_info=great_expectations_provider.get_provider_info:get_provider_info
